--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ main label {
   display: block;
   border: 1px solid var(--primary-color);
   border-radius: 0.5rem;
+  margin-top: 0.5rem;
   margin-bottom: 0.5rem;
   padding: 13px;
   width: 100%;
